infra/envoy-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: internal-http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: internal-https
      hostname: "*.local.${BASE_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: ${BASE_DOMAIN/./-}-tls
            kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: external-http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: external-https
      hostname: "*.${BASE_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: ${BASE_DOMAIN/./-}-tls
    - allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
      name: external-ssh
      port: 22
      protocol: TCP
            kind: Secret
