infra/envoy-gateway/ciliumnetworkpolicy-external.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-external
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: external
      gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  ingress:
    - fromCIDR:
        - ${LAN_NETWORK_RANGE_V4}
        - ${LAN_NETWORK_RANGE_V6}
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - fromCIDR:
        - 103.21.244.0/22
        - 103.22.200.0/22
        - 103.31.4.0/22
        - 104.16.0.0/13
        - 104.24.0.0/14
        - 108.162.192.0/18
        - 131.0.72.0/22
        - 141.101.64.0/18
        - 162.158.0.0/15
        - 172.64.0.0/13
        - 173.245.48.0/20
        - 188.114.96.0/20
        - 190.93.240.0/20
        - 197.234.240.0/22
        - 198.41.128.0/17
        - 2400:cb00::/32
        - 2405:8100::/32
        - 2405:b500::/32
        - 2606:4700::/32
        - 2803:f800::/32
        - 2a06:98c0::/29
        - 2c0f:f248::/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - fromEntities:
        - cluster
