infra/envoy-gateway/ciliumnetworkpolicy-internal.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-internal
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: internal
      gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  ingress:
    - fromCIDR:
        - ${LAN_NETWORK_RANGE_V4}
        - ${LAN_NETWORK_RANGE_V6}
      toPorts:
        - ports:
            - port: "10080"
              protocol: TCP
            - port: "10443"
              protocol: TCP
    - fromEntities:
        - cluster
